etc/ufw/user.rules
*filter
:ufw-user-input - [0:0]
:ufw-user-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-logging-deny - [0:0]
:ufw-logging-allow - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
### RULES ###

### tuple ### allow tcp 22 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 22 -j ACCEPT

### tuple ### allow any 0.0.0.0/0 any 0.0.0.0/0 in on tailscale0
-A ufw-user-input -i tailscale0 -j ACCEPT

### tuple ### allow any 0.0.0.0/0 any 0.0.0.0/0 out on tailscale0
-A ufw-user-output -o tailscale0 -j ACCEPT

### tuple ### allow udp 41641 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp --dport 41641 -j ACCEPT

### tuple ### allow tcp 22000 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 22000 -j ACCEPT

### tuple ### allow udp 22000 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp --dport 22000 -j ACCEPT

### tuple ### allow udp 21027 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp --dport 21027 -j ACCEPT

### tuple ### allow udp 9000 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp --dport 9000 -j ACCEPT

### tuple ### allow tcp 9000 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 9000 -j ACCEPT

### END RULES ###

### LOGGING ###
-A ufw-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw-logging-deny -m conntrack --ctstate INVALID -j RETURN --match limit --limit 3/min --limit-burst 10
-A ufw-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw-user-limit -m limit --limit 3/min -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw-user-limit -j REJECT
-A ufw-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
