etc/ufw/user6.rules
*filter
:ufw6-user-input - [0:0]
:ufw6-user-output - [0:0]
:ufw6-user-forward - [0:0]
:ufw6-before-logging-input - [0:0]
:ufw6-before-logging-output - [0:0]
:ufw6-before-logging-forward - [0:0]
:ufw6-user-logging-input - [0:0]
:ufw6-user-logging-output - [0:0]
:ufw6-user-logging-forward - [0:0]
:ufw6-after-logging-input - [0:0]
:ufw6-after-logging-output - [0:0]
:ufw6-after-logging-forward - [0:0]
:ufw6-logging-deny - [0:0]
:ufw6-logging-allow - [0:0]
:ufw6-user-limit - [0:0]
:ufw6-user-limit-accept - [0:0]
### RULES ###

### tuple ### allow tcp 22 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 22 -j ACCEPT

### tuple ### allow any ::/0 any ::/0 in on tailscale0
-A ufw6-user-input -i tailscale0 -j ACCEPT

### tuple ### allow any ::/0 any ::/0 out on tailscale0
-A ufw6-user-output -o tailscale0 -j ACCEPT

### tuple ### allow udp 41641 ::/0 any ::/0 in
-A ufw6-user-input -p udp --dport 41641 -j ACCEPT

### tuple ### allow tcp 22000 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 22000 -j ACCEPT

### tuple ### allow udp 22000 ::/0 any ::/0 in
-A ufw6-user-input -p udp --dport 22000 -j ACCEPT

### tuple ### allow udp 21027 ::/0 any ::/0 in
-A ufw6-user-input -p udp --dport 21027 -j ACCEPT

### tuple ### allow udp 9000 ::/0 any ::/0 in
-A ufw6-user-input -p udp --dport 9000 -j ACCEPT

### tuple ### allow tcp 9000 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 9000 -j ACCEPT

### END RULES ###

### LOGGING ###
-A ufw6-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw6-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw6-logging-deny -m conntrack --ctstate INVALID -j RETURN --match limit --limit 3/min --limit-burst 10
-A ufw6-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw6-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw6-user-limit -m limit --limit 3/min -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw6-user-limit -j REJECT
-A ufw6-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
